Integration tests and runtime error refactoring