@@ -27,8 +27,6 @@
                         javamm.interpreter/academy.devonline.javamm.interpreter.component.impl.operation=ALL-UNNAMED
                         --add-opens
                         javamm.interpreter/academy.devonline.javamm.interpreter.component.impl.operation.simple=ALL-UNNAMED
-                        --add-opens
-                        javamm.interpreter/academy.devonline.javamm.interpreter.component.impl.calculator.arithmetic=ALL-UNNAMED
 
                         --add-opens
                         javamm.interpreter/academy.devonline.javamm.interpreter.integration.calculator=ALL-UNNAMED
