@@ -23,6 +23,7 @@
                         --add-opens javamm.vm/academy.devonline.javamm.vm.integration=ALL-UNNAMED
                         --add-opens javamm.vm/academy.devonline.javamm.vm.integration.expression=ALL-UNNAMED
                         --add-opens javamm.vm/academy.devonline.javamm.vm.integration.operation=ALL-UNNAMED
+                        --add-opens javamm.vm/academy.devonline.javamm.vm.integration.function=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
